# model2vec-serve

./: .dockerignore  .gitignore  .release-plz.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: renovate.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
benches/: embeddings.rs
docs/: architecture.md  configuration.md  development.md  getting-started.md  index.md  introduction.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: errors.md  health-and-metrics.md  openai.md  tei.md
docs/deployment/: docker.md  helm.md
helm/model2vec-serve/: .helmignore  Chart.yaml  README.md  values.yaml
python/: README.md  model2vec-serve.py
specs/001-model2vec-embedding-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-default-model-multilingual/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/model/: embedding.rs  mod.rs
src/routes/: dto.rs  embeddings.rs  health.rs  metrics.rs  mod.rs  tei.rs
tests/: auth_contract.rs  auth_integration.rs  config_unit.rs  default_model_integration.rs  health_contract.rs  health_integration.rs  metrics_contract.rs  observability_integration.rs  openai_contract.rs  openai_integration.rs  tei_contract.rs  tei_integration.rs
tests/common/: mod.rs
(+16 files in other folders)
